@@ -1,5 +1,6 @@
 Version 0.34.0 (2022-02-15)
 - Use backported StrEnum
+- Sort constants to identify HA constants
 
 Version 0.33.0 (2022-02-14)
 - Make parameter availability more robust
